<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="@color/text_white"
                android:textSize="28sp"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/inputsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="28dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_email_label"
                        android:textColor="@color/text_white"
                        android:textSize="16sp"/>
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/login_email_hint"
                        android:textColorHint="@color/hint_gray"
                        android:textColor="@color/text_white"
                        android:textSize="14sp"
                        android:letterSpacing="0.016"
                        android:background="@drawable/bg_input_field"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_password_label"
                        android:textColor="@color/text_white"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/login_password_hint"
                        android:textColorHint="@color/hint_gray"
                        android:textColor="@color/text_white"
                        android:textSize="14sp"
                        android:letterSpacing="0.016"
                        android:background="@drawable/bg_input_field"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login_title"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_button_green"/>

            <LinearLayout
                android:id="@+id/actionsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_text"
                        android:textColor="@color/text_white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.033" />

                    <TextView
                        android:id="@+id/tvRegistration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_registration"
                        android:textColor="@color/green_accent"
                        android:layout_marginStart="3dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:letterSpacing="0.033"
                        android:enabled="false"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forgot_pass"
                    android:textColor="@color/green_accent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:letterSpacing="0.033"
                    android:enabled="false" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_gray"
                android:layout_marginTop="32dp"/>

            <LinearLayout
                android:id="@+id/socialContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">
                <FrameLayout
                    android:id="@+id/btnVk"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_vk"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/description_vk"
                        android:src="@drawable/ic_vk" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnOk"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_ok"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="27dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_ok"
                        android:contentDescription="@string/description_ok" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>